--- a/package.json
+++ b/package.json
@@ -43,5 +43,8 @@
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.6",
     "vite": "^6.3.1"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu" :"4.41.0"
   }
 }
