--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
     "lint": "eslint .",
     "preview": "vite preview"
   },
+  "scripts": {
+    "build": "vite build",
+    "dev": "concurrently \"npm run server\" \"vite\"", // local only
+    "server": "node server/server.cjs",
+    "start": "node server/server.cjs" // ← Render runs this
+  },
   "dependencies": {
     "@auth0/auth0-react": "^2.3.0",
     "@google/genai": "^0.14.1",
@@ -45,7 +51,7 @@
     "tailwindcss": "^4.1.6",
     "vite": "^6.3.1"
   },
-    "optionalDependencies": {
-    "@rollup/rollup-linux-x64-gnu" :"4.41.0"
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "4.41.0"
   }
 }
